--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <li><a href="">Metody pracy</a></li>
                     </ul>
                     <div class="dd-subcontent">
-                        <img src="../src/images/random.jpg" alt="">
+                        <img src="images/random.jpg" alt="">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt pretium
                             lectus at tempor. Proin fermentum, nisi sed interdum viverra, enim purus porta ante, et
                             ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
@@ -42,7 +42,7 @@
                         <li><a href="">Wspomaganie rozwoju</a></li>
                     </ul>
                     <div class="dd-subcontent">
-                        <img src="../src/images/random.jpg" alt="">
+                        <img src="images/random.jpg" alt="">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt pretium
                             lectus at tempor. Proin fermentum, nisi sed interdum viverra, enim purus porta ante, et
                             ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
@@ -60,7 +60,7 @@
                         <li><a href="">Dotacje</a></li>
                     </ul>
                     <div class="dd-subcontent">
-                        <img src="../src/images/random.jpg" alt="">
+                        <img src="images/random.jpg" alt="">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt pretium
                             lectus at tempor. Proin fermentum, nisi sed interdum viverra, enim purus porta ante, et
                             ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
@@ -78,7 +78,7 @@
                         <li><a href="">Zasady zdrowego żywienia</a></li>
                     </ul>
                     <div class="dd-subcontent">
-                        <img src="../src/images/random.jpg" alt="">
+                        <img src="images/random.jpg" alt="">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt pretium
                             lectus at tempor. Proin fermentum, nisi sed interdum viverra, enim purus porta ante, et
                             ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
@@ -97,7 +97,7 @@
                         <li><a href="">Dokumenty</a></li>
                     </ul>
                     <div class="dd-subcontent">
-                        <img src="../src/images/random.jpg" alt="">
+                        <img src="images/random.jpg" alt="">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt pretium
                             lectus at tempor. Proin fermentum, nisi sed interdum viverra, enim purus porta ante, et
                             ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
@@ -115,7 +115,7 @@
                         <li><a href="">Co pomaga w adaptacji</a></li>
                     </ul>
                     <div class="dd-subcontent">
-                        <img src="../src/images/random.jpg" alt="">
+                        <img src="images/random.jpg" alt="">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt pretium
                             lectus at tempor. Proin fermentum, nisi sed interdum viverra, enim purus porta ante, et
                             ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
@@ -133,7 +133,7 @@
                         <li><a href="">Terapia indywidualna</a></li>
                     </ul>
                     <div class="dd-subcontent">
-                        <img src="../src/images/random.jpg" alt="">
+                        <img src="images/random.jpg" alt="">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt pretium
                             lectus at tempor. Proin fermentum, nisi sed interdum viverra, enim purus porta ante, et
                             ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
@@ -151,7 +151,7 @@
                         <li><a href="">Baza wiedzy</a></li>
                     </ul>
                     <div class="dd-subcontent">
-                        <img src="../src/images/random.jpg" alt="">
+                        <img src="images/random.jpg" alt="">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt pretium
                             lectus at tempor. Proin fermentum, nisi sed interdum viverra, enim purus porta ante, et
                             ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
@@ -173,15 +173,15 @@
         <div class="slider-container">
             <div class="slider">
                 <div class="slider-element">
-                    <img src="../src/images/slider1.jpg" alt="Slide 1">
+                    <img src="images/slider1.jpg" alt="Slide 1">
                     <div class="slider-caption">Slide 1 Caption</div>
                 </div>
                 <div class="slider-element">
-                    <img src="../src/images/slider2.jpg" alt="Slide 2">
+                    <img src="images/slider2.jpg" alt="Slide 2">
                     <div class="slider-caption">Slide 2 Caption</div>
                 </div>
                 <div class="slider-element">
-                    <img src="../src/images/slider3.png" alt="Slide 3">
+                    <img src="images/slider3.png" alt="Slide 3">
                     <div class="slider-caption">Slide 3 Caption</div>
                 </div>
             </div>
@@ -230,12 +230,12 @@
                     mauris ultrices, tincidunt leo a, volutpat lacus.</p>
             </div>
             <div class="banner-with-image-right-image">
-                <img src="../src/images/random.jpg">
+                <img src="images/random.jpg">
             </div>
         </div>
         <div class="banner-with-image-left">
             <div class="banner-with-image-left-image">
-                <img src="../src/images/random.jpg">
+                <img src="images/random.jpg">
             </div>
             <div class="banner-with-image-left-content">
                 <h3>Lorem ipsum</h3>
