--- a/content3.html
+++ b/content3.html
@@ -11,7 +11,7 @@
 <body>
 <header>
     <div class="logo-box">
-        <img src="../src/images/logo.png" alt="">
+        <img src="src/images/logo.png" alt="">
         <div>
             <h2>Żłobek bajkowy</h2>
             <p>bo bajka jest dobra na wszystko</p>
@@ -20,15 +20,15 @@
 
     <ul class="navbar">
         <li>
-            <a href="./content.html">O nas</a>
+            <a href="content.html">O nas</a>
             <div class="dropdown">
                 <ul>
-                    <li><a href="./content.html">Żłobek</a></li>
-                    <li><a href="./content2.html">Kadra</a></li>
+                    <li><a href="content.html">Żłobek</a></li>
+                    <li><a href="content2.html">Kadra</a></li>
                     <li><a href="./content3.html">Metody pracy</a></li>
                 </ul>
                 <div class="dd-subcontent">
-                    <img src="../src/images/random.jpg" alt="">
+                    <img src="src/images/random.jpg" alt="">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt pretium
                         lectus at tempor. Proin fermentum, nisi sed interdum viverra, enim purus porta ante, et
                         ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
@@ -39,14 +39,14 @@
             </div>
         </li>
         <li>
-            <a href="./posts-list.html">Oferta</a>
+            <a href="posts-list.html">Oferta</a>
             <div class="dropdown">
                 <ul>
-                    <li><a href="./post.html">Opieka i wychowanskowie</a></li>
+                    <li><a href="post.html">Opieka i wychowanskowie</a></li>
                     <li><a href="./content3.html">Wspomaganie rozwoju</a></li>
                 </ul>
                 <div class="dd-subcontent">
-                    <img src="../src/images/random.jpg" alt="">
+                    <img src="src/images/random.jpg" alt="">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt pretium
                         lectus at tempor. Proin fermentum, nisi sed interdum viverra, enim purus porta ante, et
                         ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
@@ -57,14 +57,14 @@
             </div>
         </li>
         <li>
-            <a href="./posts-list.html">Finansowanie</a>
+            <a href="posts-list.html">Finansowanie</a>
             <div class="dropdown">
                 <ul>
-                    <li><a href="./post.html">Opłaty</a></li>
-                    <li><a href="./post.html">Dotacje</a></li>
+                    <li><a href="post.html">Opłaty</a></li>
+                    <li><a href="post.html">Dotacje</a></li>
                 </ul>
                 <div class="dd-subcontent">
-                    <img src="../src/images/random.jpg" alt="">
+                    <img src="src/images/random.jpg" alt="">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt pretium
                         lectus at tempor. Proin fermentum, nisi sed interdum viverra, enim purus porta ante, et
                         ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
@@ -75,14 +75,14 @@
             </div>
         </li>
         <li>
-            <a href="./content.html">Wyżywienie</a>
+            <a href="content.html">Wyżywienie</a>
             <div class="dropdown">
                 <ul>
                     <li><a href="./content3.html">Posiłki</a></li>
-                    <li><a href="./posts-list.html">Zasady zdrowego żywienia</a></li>
+                    <li><a href="posts-list.html">Zasady zdrowego żywienia</a></li>
                 </ul>
                 <div class="dd-subcontent">
-                    <img src="../src/images/random.jpg" alt="">
+                    <img src="src/images/random.jpg" alt="">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt pretium
                         lectus at tempor. Proin fermentum, nisi sed interdum viverra, enim purus porta ante, et
                         ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
@@ -93,15 +93,15 @@
             </div>
         </li>
         <li>
-            <a href="./content.html">Zapisy</a>
+            <a href="content.html">Zapisy</a>
             <div class="dropdown">
                 <ul>
-                    <li><a href="./post.html">Jak się zapisać?</a></li>
-                    <li><a href="./post.html">Wyprawka</a></li>
-                    <li><a href="./post.html">Dokumenty</a></li>
+                    <li><a href="post.html">Jak się zapisać?</a></li>
+                    <li><a href="post.html">Wyprawka</a></li>
+                    <li><a href="post.html">Dokumenty</a></li>
                 </ul>
                 <div class="dd-subcontent">
-                    <img src="../src/images/random.jpg" alt="">
+                    <img src="src/images/random.jpg" alt="">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt pretium
                         lectus at tempor. Proin fermentum, nisi sed interdum viverra, enim purus porta ante, et
                         ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
@@ -112,14 +112,14 @@
             </div>
         </li>
         <li>
-            <a href="./posts-list.html">Adaptacja</a>
+            <a href="posts-list.html">Adaptacja</a>
             <div class="dropdown">
                 <ul>
-                    <li><a href="./post.html">Etapy adaptacji</a></li>
-                    <li><a href="./post.html">Co pomaga w adaptacji</a></li>
+                    <li><a href="post.html">Etapy adaptacji</a></li>
+                    <li><a href="post.html">Co pomaga w adaptacji</a></li>
                 </ul>
                 <div class="dd-subcontent">
-                    <img src="../src/images/random.jpg" alt="">
+                    <img src="src/images/random.jpg" alt="">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt pretium
                         lectus at tempor. Proin fermentum, nisi sed interdum viverra, enim purus porta ante, et
                         ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
@@ -133,11 +133,11 @@
             <a href="./content3.html">Gabinet pomocy pedagogicznej</a>
             <div class="dropdown">
                 <ul>
-                    <li><a href="./content.html">Zajęcia grupowe</a></li>
-                    <li><a href="./post.html">Terapia indywidualna</a></li>
+                    <li><a href="content.html">Zajęcia grupowe</a></li>
+                    <li><a href="post.html">Terapia indywidualna</a></li>
                 </ul>
                 <div class="dd-subcontent">
-                    <img src="../src/images/random.jpg" alt="">
+                    <img src="src/images/random.jpg" alt="">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt pretium
                         lectus at tempor. Proin fermentum, nisi sed interdum viverra, enim purus porta ante, et
                         ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
@@ -148,14 +148,14 @@
             </div>
         </li>
         <li>
-            <a href="./posts-list.html">Co warto wiedzieć?</a>
+            <a href="posts-list.html">Co warto wiedzieć?</a>
             <div class="dropdown">
                 <ul>
-                    <li><a href="./posts-list.html">Aktualności</a></li>
-                    <li><a href="./content.html">Baza wiedzy</a></li>
+                    <li><a href="posts-list.html">Aktualności</a></li>
+                    <li><a href="content.html">Baza wiedzy</a></li>
                 </ul>
                 <div class="dd-subcontent">
-                    <img src="../src/images/random.jpg" alt="">
+                    <img src="src/images/random.jpg" alt="">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt pretium
                         lectus at tempor. Proin fermentum, nisi sed interdum viverra, enim purus porta ante, et
                         ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
@@ -177,7 +177,7 @@
     <h1 class="page-title">Content 3</h1>
     <div class="content">
         <div class="content-image">
-            <img src="../src/images/child2.jpg" alt="">
+            <img src="src/images/child2.jpg" alt="">
         </div>
         <div class="content-text content-background-3">
             <h3>Lorem ipsum</h3>
@@ -254,7 +254,7 @@
                 mauris ultrices, tincidunt leo a, volutpat lacus.</p>
         </div>
         <div class="content-image">
-            <img src="../src/images/child.jpg" alt="">
+            <img src="src/images/child.jpg" alt="">
         </div>
     </div>
 </div>
