--- a/posts-list.html
+++ b/posts-list.html
@@ -11,7 +11,7 @@
 <body>
 <header>
     <div class="logo-box">
-        <img src="../src/images/logo.png" alt="">
+        <img src="src/images/logo.png" alt="">
         <div>
             <h2>Żłobek bajkowy</h2>
             <p>bo bajka jest dobra na wszystko</p>
@@ -20,15 +20,15 @@
 
     <ul class="navbar">
         <li>
-            <a href="./content.html">O nas</a>
+            <a href="content.html">O nas</a>
             <div class="dropdown">
                 <ul>
-                    <li><a href="./content.html">Żłobek</a></li>
-                    <li><a href="./content2.html">Kadra</a></li>
-                    <li><a href="./content3.html">Metody pracy</a></li>
+                    <li><a href="content.html">Żłobek</a></li>
+                    <li><a href="content2.html">Kadra</a></li>
+                    <li><a href="content3.html">Metody pracy</a></li>
                 </ul>
                 <div class="dd-subcontent">
-                    <img src="../src/images/random.jpg" alt="">
+                    <img src="src/images/random.jpg" alt="">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt pretium
                         lectus at tempor. Proin fermentum, nisi sed interdum viverra, enim purus porta ante, et
                         ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
@@ -42,11 +42,11 @@
             <a href="./posts-list.html">Oferta</a>
             <div class="dropdown">
                 <ul>
-                    <li><a href="./post.html">Opieka i wychowanskowie</a></li>
-                    <li><a href="./content3.html">Wspomaganie rozwoju</a></li>
+                    <li><a href="post.html">Opieka i wychowanskowie</a></li>
+                    <li><a href="content3.html">Wspomaganie rozwoju</a></li>
                 </ul>
                 <div class="dd-subcontent">
-                    <img src="../src/images/random.jpg" alt="">
+                    <img src="src/images/random.jpg" alt="">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt pretium
                         lectus at tempor. Proin fermentum, nisi sed interdum viverra, enim purus porta ante, et
                         ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
@@ -60,11 +60,11 @@
             <a href="./posts-list.html">Finansowanie</a>
             <div class="dropdown">
                 <ul>
-                    <li><a href="./post.html">Opłaty</a></li>
-                    <li><a href="./post.html">Dotacje</a></li>
+                    <li><a href="post.html">Opłaty</a></li>
+                    <li><a href="post.html">Dotacje</a></li>
                 </ul>
                 <div class="dd-subcontent">
-                    <img src="../src/images/random.jpg" alt="">
+                    <img src="src/images/random.jpg" alt="">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt pretium
                         lectus at tempor. Proin fermentum, nisi sed interdum viverra, enim purus porta ante, et
                         ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
@@ -75,14 +75,14 @@
             </div>
         </li>
         <li>
-            <a href="./content.html">Wyżywienie</a>
+            <a href="content.html">Wyżywienie</a>
             <div class="dropdown">
                 <ul>
-                    <li><a href="./content3.html">Posiłki</a></li>
+                    <li><a href="content3.html">Posiłki</a></li>
                     <li><a href="./posts-list.html">Zasady zdrowego żywienia</a></li>
                 </ul>
                 <div class="dd-subcontent">
-                    <img src="../src/images/random.jpg" alt="">
+                    <img src="src/images/random.jpg" alt="">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt pretium
                         lectus at tempor. Proin fermentum, nisi sed interdum viverra, enim purus porta ante, et
                         ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
@@ -93,15 +93,15 @@
             </div>
         </li>
         <li>
-            <a href="./content.html">Zapisy</a>
+            <a href="content.html">Zapisy</a>
             <div class="dropdown">
                 <ul>
-                    <li><a href="./post.html">Jak się zapisać?</a></li>
-                    <li><a href="./post.html">Wyprawka</a></li>
-                    <li><a href="./post.html">Dokumenty</a></li>
+                    <li><a href="post.html">Jak się zapisać?</a></li>
+                    <li><a href="post.html">Wyprawka</a></li>
+                    <li><a href="post.html">Dokumenty</a></li>
                 </ul>
                 <div class="dd-subcontent">
-                    <img src="../src/images/random.jpg" alt="">
+                    <img src="src/images/random.jpg" alt="">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt pretium
                         lectus at tempor. Proin fermentum, nisi sed interdum viverra, enim purus porta ante, et
                         ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
@@ -115,11 +115,11 @@
             <a href="./posts-list.html">Adaptacja</a>
             <div class="dropdown">
                 <ul>
-                    <li><a href="./post.html">Etapy adaptacji</a></li>
-                    <li><a href="./post.html">Co pomaga w adaptacji</a></li>
+                    <li><a href="post.html">Etapy adaptacji</a></li>
+                    <li><a href="post.html">Co pomaga w adaptacji</a></li>
                 </ul>
                 <div class="dd-subcontent">
-                    <img src="../src/images/random.jpg" alt="">
+                    <img src="src/images/random.jpg" alt="">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt pretium
                         lectus at tempor. Proin fermentum, nisi sed interdum viverra, enim purus porta ante, et
                         ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
@@ -130,14 +130,14 @@
             </div>
         </li>
         <li>
-            <a href="./content3.html">Gabinet pomocy pedagogicznej</a>
+            <a href="content3.html">Gabinet pomocy pedagogicznej</a>
             <div class="dropdown">
                 <ul>
-                    <li><a href="./content.html">Zajęcia grupowe</a></li>
-                    <li><a href="./post.html">Terapia indywidualna</a></li>
+                    <li><a href="content.html">Zajęcia grupowe</a></li>
+                    <li><a href="post.html">Terapia indywidualna</a></li>
                 </ul>
                 <div class="dd-subcontent">
-                    <img src="../src/images/random.jpg" alt="">
+                    <img src="src/images/random.jpg" alt="">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt pretium
                         lectus at tempor. Proin fermentum, nisi sed interdum viverra, enim purus porta ante, et
                         ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
@@ -152,10 +152,10 @@
             <div class="dropdown">
                 <ul>
                     <li><a href="./posts-list.html">Aktualności</a></li>
-                    <li><a href="./content.html">Baza wiedzy</a></li>
+                    <li><a href="content.html">Baza wiedzy</a></li>
                 </ul>
                 <div class="dd-subcontent">
-                    <img src="../src/images/random.jpg" alt="">
+                    <img src="src/images/random.jpg" alt="">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt pretium
                         lectus at tempor. Proin fermentum, nisi sed interdum viverra, enim purus porta ante, et
                         ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
@@ -178,11 +178,11 @@
     <div class="posts-list">
         <div class="posts-list-element posts-list-background-1">
             <div class="posts-list-element-image">
-                <img src="../src/images/random.jpg" alt="">
+                <img src="src/images/random.jpg" alt="">
             </div>
             <div class="posts-list-element-text">
                 <i>2024-05-01 17:00</i>
-                <a href="./post.html">
+                <a href="post.html">
                     <button class="arrow-button arrow-button-top">Przejdź</button>
                 </a>
                 <h3>Lorem ipsum</h3>
@@ -190,61 +190,61 @@
                     tempor. Proin fermentum, nisi sed interdum viverra, enim purus porta ante, et ornare quam elit in
                     diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis porta sem, eu viverra
                     diam...</p>
-                <a href="./post.html">
+                <a href="post.html">
                     <button class="arrow-button arrow-button-bottom">Przejdź</button>
                 </a>
             </div>
         </div>
         <div class="posts-list-element posts-list-background-2">
             <div class="posts-list-element-image">
-                <img src="../src/images/random2.jpg" alt="">
+                <img src="src/images/random2.jpg" alt="">
             </div>
             <div class="posts-list-element-text">
                 <i>2024-05-02 18:00</i>
-                <a href="./post.html">
+                <a href="post.html">
                     <button class="arrow-button arrow-button-top">Przejdź</button>
                 </a>
                 <h3>Dolor sit amet</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam quis odio sit amet libero commodo
                     gravida. Vivamus auctor velit at nisi volutpat, sit amet facilisis mauris scelerisque. Fusce ut
                     ligula non urna sodales porttitor. Donec vitae turpis nisl...</p>
-                <a href="./post.html">
+                <a href="post.html">
                     <button class="arrow-button arrow-button-bottom">Przejdź</button>
                 </a>
             </div>
         </div>
         <div class="posts-list-element posts-list-background-1">
             <div class="posts-list-element-image">
-                <img src="../src/images/random3.jpg" alt="">
+                <img src="src/images/random3.jpg" alt="">
             </div>
             <div class="posts-list-element-text">
                 <i>2024-05-03 19:00</i>
-                <a href="./post.html">
+                <a href="post.html">
                     <button class="arrow-button arrow-button-top">Przejdź</button>
                 </a>
                 <h3>Consectetur adipiscing</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod, sapien eget auctor vehicula,
                     augue nulla pharetra felis, a malesuada nulla nulla in erat. Sed id suscipit ex. Donec elementum
                     sapien ut nisl faucibus dignissim. Vestibulum consectetur...</p>
-                <a href="./post.html">
+                <a href="post.html">
                     <button class="arrow-button arrow-button-bottom">Przejdź</button>
                 </a>
             </div>
         </div>
         <div class="posts-list-element posts-list-background-2">
             <div class="posts-list-element-image">
-                <img src="../src/images/random5.jpg" alt="">
+                <img src="src/images/random5.jpg" alt="">
             </div>
             <div class="posts-list-element-text">
                 <i>2024-05-04 20:00</i>
-                <a href="./post.html">
+                <a href="post.html">
                     <button class="arrow-button arrow-button-top">Przejdź</button>
                 </a>
                 <h3>Tincidunt pretium</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur non urna in orci aliquet dapibus.
                     Integer nec felis a magna varius condimentum. Nullam at nisi in orci feugiat tempor. Morbi in
                     scelerisque lacus. Aliquam erat volutpat. Sed lacinia justo vitae...</p>
-                <a href="./post.html">
+                <a href="post.html">
                     <button class="arrow-button arrow-button-bottom">Przejdź</button>
                 </a>
             </div>
