--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <header>
     <div class="logo-box">
-        <img src="../src/images/logo.png" alt="">
+        <img src="src/images/logo.png" alt="">
         <div>
             <h2>Żłobek bajkowy</h2>
             <p>bo bajka jest dobra na wszystko</p>
@@ -20,15 +20,15 @@
 
     <ul class="navbar">
         <li>
-            <a href="./content.html">O nas</a>
+            <a href="content.html">O nas</a>
             <div class="dropdown">
                 <ul>
-                    <li><a href="./content.html">Żłobek</a></li>
-                    <li><a href="./content2.html">Kadra</a></li>
-                    <li><a href="./content3.html">Metody pracy</a></li>
+                    <li><a href="content.html">Żłobek</a></li>
+                    <li><a href="content2.html">Kadra</a></li>
+                    <li><a href="content3.html">Metody pracy</a></li>
                 </ul>
                 <div class="dd-subcontent">
-                    <img src="../src/images/random.jpg" alt="">
+                    <img src="src/images/random.jpg" alt="">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt pretium
                         lectus at tempor. Proin fermentum, nisi sed interdum viverra, enim purus porta ante, et
                         ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
@@ -39,14 +39,14 @@
             </div>
         </li>
         <li>
-            <a href="./posts-list.html">Oferta</a>
+            <a href="posts-list.html">Oferta</a>
             <div class="dropdown">
                 <ul>
-                    <li><a href="./post.html">Opieka i wychowanskowie</a></li>
-                    <li><a href="./content3.html">Wspomaganie rozwoju</a></li>
+                    <li><a href="post.html">Opieka i wychowanskowie</a></li>
+                    <li><a href="content3.html">Wspomaganie rozwoju</a></li>
                 </ul>
                 <div class="dd-subcontent">
-                    <img src="../src/images/random.jpg" alt="">
+                    <img src="src/images/random.jpg" alt="">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt pretium
                         lectus at tempor. Proin fermentum, nisi sed interdum viverra, enim purus porta ante, et
                         ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
@@ -57,14 +57,14 @@
             </div>
         </li>
         <li>
-            <a href="./posts-list.html">Finansowanie</a>
+            <a href="posts-list.html">Finansowanie</a>
             <div class="dropdown">
                 <ul>
-                    <li><a href="./post.html">Opłaty</a></li>
-                    <li><a href="./post.html">Dotacje</a></li>
+                    <li><a href="post.html">Opłaty</a></li>
+                    <li><a href="post.html">Dotacje</a></li>
                 </ul>
                 <div class="dd-subcontent">
-                    <img src="../src/images/random.jpg" alt="">
+                    <img src="src/images/random.jpg" alt="">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt pretium
                         lectus at tempor. Proin fermentum, nisi sed interdum viverra, enim purus porta ante, et
                         ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
@@ -75,14 +75,14 @@
             </div>
         </li>
         <li>
-            <a href="./content.html">Wyżywienie</a>
+            <a href="content.html">Wyżywienie</a>
             <div class="dropdown">
                 <ul>
-                    <li><a href="./content3.html">Posiłki</a></li>
-                    <li><a href="./posts-list.html">Zasady zdrowego żywienia</a></li>
+                    <li><a href="content3.html">Posiłki</a></li>
+                    <li><a href="posts-list.html">Zasady zdrowego żywienia</a></li>
                 </ul>
                 <div class="dd-subcontent">
-                    <img src="../src/images/random.jpg" alt="">
+                    <img src="src/images/random.jpg" alt="">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt pretium
                         lectus at tempor. Proin fermentum, nisi sed interdum viverra, enim purus porta ante, et
                         ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
@@ -93,15 +93,15 @@
             </div>
         </li>
         <li>
-            <a href="./content.html">Zapisy</a>
+            <a href="content.html">Zapisy</a>
             <div class="dropdown">
                 <ul>
-                    <li><a href="./post.html">Jak się zapisać?</a></li>
-                    <li><a href="./post.html">Wyprawka</a></li>
-                    <li><a href="./post.html">Dokumenty</a></li>
+                    <li><a href="post.html">Jak się zapisać?</a></li>
+                    <li><a href="post.html">Wyprawka</a></li>
+                    <li><a href="post.html">Dokumenty</a></li>
                 </ul>
                 <div class="dd-subcontent">
-                    <img src="../src/images/random.jpg" alt="">
+                    <img src="src/images/random.jpg" alt="">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt pretium
                         lectus at tempor. Proin fermentum, nisi sed interdum viverra, enim purus porta ante, et
                         ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
@@ -112,14 +112,14 @@
             </div>
         </li>
         <li>
-            <a href="./posts-list.html">Adaptacja</a>
+            <a href="posts-list.html">Adaptacja</a>
             <div class="dropdown">
                 <ul>
-                    <li><a href="./post.html">Etapy adaptacji</a></li>
-                    <li><a href="./post.html">Co pomaga w adaptacji</a></li>
+                    <li><a href="post.html">Etapy adaptacji</a></li>
+                    <li><a href="post.html">Co pomaga w adaptacji</a></li>
                 </ul>
                 <div class="dd-subcontent">
-                    <img src="../src/images/random.jpg" alt="">
+                    <img src="src/images/random.jpg" alt="">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt pretium
                         lectus at tempor. Proin fermentum, nisi sed interdum viverra, enim purus porta ante, et
                         ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
@@ -130,14 +130,14 @@
             </div>
         </li>
         <li>
-            <a href="./content3.html">Gabinet pomocy pedagogicznej</a>
+            <a href="content3.html">Gabinet pomocy pedagogicznej</a>
             <div class="dropdown">
                 <ul>
-                    <li><a href="./content.html">Zajęcia grupowe</a></li>
-                    <li><a href="./post.html">Terapia indywidualna</a></li>
+                    <li><a href="content.html">Zajęcia grupowe</a></li>
+                    <li><a href="post.html">Terapia indywidualna</a></li>
                 </ul>
                 <div class="dd-subcontent">
-                    <img src="../src/images/random.jpg" alt="">
+                    <img src="src/images/random.jpg" alt="">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt pretium
                         lectus at tempor. Proin fermentum, nisi sed interdum viverra, enim purus porta ante, et
                         ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
@@ -148,14 +148,14 @@
             </div>
         </li>
         <li>
-            <a href="./posts-list.html">Co warto wiedzieć?</a>
+            <a href="posts-list.html">Co warto wiedzieć?</a>
             <div class="dropdown">
                 <ul>
-                    <li><a href="./posts-list.html">Aktualności</a></li>
-                    <li><a href="./content.html">Baza wiedzy</a></li>
+                    <li><a href="posts-list.html">Aktualności</a></li>
+                    <li><a href="content.html">Baza wiedzy</a></li>
                 </ul>
                 <div class="dd-subcontent">
-                    <img src="../src/images/random.jpg" alt="">
+                    <img src="src/images/random.jpg" alt="">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt pretium
                         lectus at tempor. Proin fermentum, nisi sed interdum viverra, enim purus porta ante, et
                         ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
@@ -174,12 +174,24 @@
 </header>
 <div class="container">
     <!-- Tu trza wpierdolić @yeld('container') -->
-    <h1 class="page-title">Content 2</h1>
-    <div class="content">
-        <div class="content-image">
-            <img src="../src/images/child2.jpg" alt="">
+    <div class="slider-container">
+        <div class="slider">
+            <div class="slider-element">
+                <img src="src/images/slider1.jpg" alt="Slide 1">
+                <div class="slider-caption">Slide 1 Caption</div>
+            </div>
+            <div class="slider-element">
+                <img src="src/images/slider2.jpg" alt="Slide 2">
+                <div class="slider-caption">Slide 2 Caption</div>
+            </div>
+            <div class="slider-element">
+                <img src="src/images/slider3.png" alt="Slide 3">
+                <div class="slider-caption">Slide 3 Caption</div>
+            </div>
         </div>
-        <div class="content-text content-background-4">
+    </div>
+    <div class="page-card-container">
+        <div class="page-card page-card-1-additional page-card-1">
             <h3>Lorem ipsum</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
                 tincidunt pretium
@@ -187,15 +199,21 @@
                 ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
                 porta sem, eu viverra diam. Curabitur a suscipit mauris, eget vestibulum ante. Integer
                 sollicitudin urna lectus, ac mattis nunc bibendum sit amet. Donec at sem ipsum. Nullam sed
-                mauris ultrices, tincidunt leo a, volutpat lacus.
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
+                mauris ultrices, tincidunt leo a, volutpat lacus.</p>
+        </div>
+        <div class="page-card page-card-2-additional page-card-2">
+            <h3>Lorem ipsum</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
                 tincidunt pretium
                 lectus at tempor. Proin fermentum, nisi sed interdum viverra, enim purus porta ante, et
                 ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
                 porta sem, eu viverra diam. Curabitur a suscipit mauris, eget vestibulum ante. Integer
                 sollicitudin urna lectus, ac mattis nunc bibendum sit amet. Donec at sem ipsum. Nullam sed
-                mauris ultrices, tincidunt leo a, volutpat lacus.
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
+                mauris ultrices, tincidunt leo a, volutpat lacus.</p>
+        </div>
+        <div class="page-card page-card-3-additional page-card-3">
+            <h3>Lorem ipsum</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
                 tincidunt pretium
                 lectus at tempor. Proin fermentum, nisi sed interdum viverra, enim purus porta ante, et
                 ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
@@ -204,8 +222,8 @@
                 mauris ultrices, tincidunt leo a, volutpat lacus.</p>
         </div>
     </div>
-    <div class="content">
-        <div class="content-text content-background-2">
+    <div class="banner-with-image-right">
+        <div class="banner-with-image-right-content">
             <h3>Lorem ipsum</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
                 tincidunt pretium
@@ -213,48 +231,25 @@
                 ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
                 porta sem, eu viverra diam. Curabitur a suscipit mauris, eget vestibulum ante. Integer
                 sollicitudin urna lectus, ac mattis nunc bibendum sit amet. Donec at sem ipsum. Nullam sed
-                mauris ultrices, tincidunt leo a, volutpat lacus.
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
-                tincidunt pretium
-                lectus at tempor. Proin fermentum, nisi sed interdum viverra, enim purus porta ante, et
-                ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
-                porta sem, eu viverra diam. Curabitur a suscipit mauris, eget vestibulum ante. Integer
-                sollicitudin urna lectus, ac mattis nunc bibendum sit amet. Donec at sem ipsum. Nullam sed
-                mauris ultrices, tincidunt leo a, volutpat lacus.
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
-                tincidunt pretium
-                lectus at tempor. Proin fermentum, nisi sed interdum viverra, enim purus porta ante, et
-                ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
-                porta sem, eu viverra diam. Curabitur a suscipit mauris, eget vestibulum ante. Integer
-                sollicitudin urna lectus, ac mattis nunc bibendum sit amet. Donec at sem ipsum. Nullam sed
                 mauris ultrices, tincidunt leo a, volutpat lacus.</p>
         </div>
-        <div class="content-image">
-            <img src="../src/images/child.jpg" alt="">
+        <div class="banner-with-image-right-image">
+            <img src="src/images/random.jpg">
         </div>
     </div>
-    <div class="content">
-        <div class="content-full content-background-1">
+    <div class="banner-with-image-left">
+        <div class="banner-with-image-left-image">
+            <img src="src/images/random.jpg">
+        </div>
+        <div class="banner-with-image-left-content">
+            <h3>Lorem ipsum</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
                 tincidunt pretium
                 lectus at tempor. Proin fermentum, nisi sed interdum viverra, enim purus porta ante, et
                 ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
                 porta sem, eu viverra diam. Curabitur a suscipit mauris, eget vestibulum ante. Integer
                 sollicitudin urna lectus, ac mattis nunc bibendum sit amet. Donec at sem ipsum. Nullam sed
-                mauris ultrices, tincidunt leo a, volutpat lacus.
-            </p>
-            <p style="font-weight: bold">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt pretium
-                lectus at tempor. Proin fermentum, nisi sed interdum viverra, enim purus porta ante, et
-                ornare quam elit in diam. Aliquam erat volutpat. Proin id accumsan velit. Maecenas quis
-                porta sem, eu viverra diam. Curabitur a suscipit mauris, eget vestibulum ante. Integer
-                sollicitudin urna lectus, ac mattis nunc bibendum sit amet. Donec at sem ipsum. Nullam sed
-                mauris ultrices, tincidunt leo a, volutpat lacus.
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt pretium
-                lectus at tempor.
-            </p>
+                mauris ultrices, tincidunt leo a, volutpat lacus.</p>
         </div>
     </div>
 </div>
@@ -272,7 +267,21 @@
         <p>&copy; 2024 Wszelkie prawa zastrzerzone.</p>
     </div>
 </footer>
+<svg class="bgpath" xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
+     xmlns:svgjs="http://svgjs.dev/svgjs" viewBox="0 0 800 400">
+    <path
+            d="M-0.44843047857284546,323.7668151855469C29.266068219443163,328.07772939046225,111.3692070260644,346.2615963745117,172.64573669433594,348.8789367675781C233.92226636260747,351.4962771606445,292.6083507537842,354.8714599609375,356.5022277832031,339.0134582519531C420.39610481262207,323.15545654296875,508.9701360575358,291.45140637715656,544.8430786132812,256.5022277832031C580.7160211690267,221.55304918924966,572.0911610921224,168.0657683436076,565.4708251953125,135.42601013183594C558.8504892985026,102.78625192006429,535.3766676839193,80.53213855107626,506.27801513671875,66.36771392822266C477.17936258951823,52.203289305369054,425.832571105957,43.06128635406494,395.964111328125,52.914798736572266C366.095651550293,62.76831111907959,336.1360129801432,93.1285488319397,332.2869873046875,123.76681518554688C328.4379616292318,154.40508153915405,346.5994018554687,200.5979103597005,373.5426025390625,231.39013671875C400.4858032226563,262.1823630777995,442.1255647786458,283.5859447733561,489.2376708984375,303.1390075683594C536.3497770182291,322.69207036336263,594.7115021769206,336.5156856282552,647.9820556640625,345.2914733886719C701.2526091512044,354.06726114908855,773.532140604655,352.7204868570964,799.5515747070312,354.2601013183594"
+            fill="none" stroke-width="8" stroke="url(&quot;#SvgjsLinearGradient1001&quot;)" stroke-linecap="round"
+            stroke-dasharray="0 0" id="path2357"></path>
+    <defs>
+        <linearGradient id="SvgjsLinearGradient1001">
+            <stop stop-color="hsl(37, 99%, 67%)" offset="0"></stop>
+            <stop stop-color="hsl(316, 73%, 52%)" offset="1"></stop>
+        </linearGradient>
+    </defs>
+</svg>
 <script src="index.js"></script>
+
 </body>
 
 </html>
